# RH-Analytics---Dashboard-for-Companies

./: .gitignore  .pre-commit-config.yaml  README.md  RELATORIO_REVISAO.md  contracts.md  package-lock.json  package.json
.claude/: settings.local.json
.husky/: pre-commit
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: __init__.py
backend/app/api/v1/: alas.py  auth.py  dashboard.py  departments.py  employees.py  evaluations.py  loans.py  payroll.py  positions.py  timesheets.py
backend/app/builders/: base_builder.py  employee_builder.py  loan_builder.py  payroll_builder.py  timesheet_builder.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  ala.py  audit.py  course.py  department.py  document.py  employee.py  evaluation.py  loan.py  loan_installment.py  payroll.py  position.py  position_history.py  timesheet.py  timesheet_import.py  user.py
backend/app/schemas/: auth.py  dashboard.py  employee.py  evaluation.py  loan.py  payroll.py  timesheet.py
backend/app/services/: audit_service.py  file_parser.py  inss_calculator.py  irrf_calculator.py  payroll_calculator.py
backend/app/utils/: encryption.py  pagination.py
backend/seeds/: reset_data.py  seed_data.py
backend/tests/: test_inss.py  test_irrf.py  test_payroll.py
frontend/: .env.example  biome.json  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: EmployeeForm.css  EmployeeForm.tsx  LoanForm.tsx  (+2 more)
(+36 files in other folders)
